--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     </head>
         <header>
             <!-- Foto de Perfil-->
-             <img src="C:\Users\felip\OneDrive\Desktop\bat.png.jpg" alt ="Foto do Batman" width="200" height="150">
-
+             <img src="bat.png.jpg" alt="Foto de Perfil" width="200"  height="200">
              <h1>Felipe Costa</h1>
              <p><strong>Estudante de Ciencia da Computacao</strong></p>
 
@@ -79,7 +78,7 @@
              <!-- Formulario de Contato -->
              <section>
                 <h2>"Mande Mensagem"</h2>
-                <form>      
+                <form action="#" method="post">
                     <label>Nome:</label>
                     <input type="text" name="nome"><br>
                     
